--- a/css/global.css
+++ b/css/global.css
@@ -1,7 +1,15 @@
 html {
-    box-sizing: border-box;
-  }
-  
-  *, ::after, ::before {
-    box-sizing: border-box;
-  }
+  box-sizing:border-box;   
+}
+
+*, ::before, ::after {
+  box-sizing: inherit;
+}
+
+body {
+  font-family: 'Lato', sans-serif;
+  background-color: #eee;
+  max-width: 800px;
+  margin: 0 auto;
+  font-family: 'Lato', sans-serif;
+}
