--- a/css/toDoList.css
+++ b/css/toDoList.css
@@ -41,5 +41,13 @@
     background-color: white;
     padding: 20px;
     margin: 1px 20px 1px 20px;
-   
+    list-style: inside;
+}
+
+.taskList__tasks {
+    margin: 5px 10px;
+    padding: 10px;
+    border-bottom: 1px solid green;
+    list-style-type: "🟩";
+    font-size: 20px;
 }
