--- a/css/form.css
+++ b/css/form.css
@@ -8,7 +8,15 @@
 
 .form__input {
     padding: 8px;
-    border: 1px s
+    border: 1px;
+}
+
+.form__input {
+    border: 2px solid #eee;
+}
+
+.form__input:active {
+    border-color: black;
 }
 
 .form__button {
@@ -17,4 +25,8 @@
     padding: 8px;
     margin-left: 15px;
     border-style: none;
+}
+
+.form__button:active {
+    border: 2px solid black;
 }
