--- a/css/form.css
+++ b/css/form.css
@@ -6,12 +6,14 @@
     grid-template-columns: 4fr 1fr;
 }
 
-.form__input {
-    padding: 8px;
-    border: 1px;
+@media (max-width: 767px) {
+    .form {
+        grid-template-columns: 1fr;
+    } 
 }
 
 .form__input {
+    padding: 8px;
     border: 2px solid #eee;
 }
 
@@ -25,6 +27,13 @@
     padding: 8px;
     margin-left: 15px;
     border-style: none;
+}
+
+@media (max-width: 767px) {
+    .form__button {
+        margin: 0;
+        margin-top: 10px;
+    }
 }
 
 .form__button:active {
