js auto pointer added

--- a/css/form.css
+++ b/css/form.css
@@ -17,6 +17,11 @@
     border: 2px solid #eee;
 }
 
+.form__input:hover {
+    background-color: rgb(244, 243, 243);
+    cursor: text;
+}
+
 .form__input:active {
     border-color: black;
 }
@@ -34,6 +39,11 @@
         margin: 0;
         margin-top: 10px;
     }
+}
+
+.form__button:hover {
+    background-color: rgb(1, 141, 141);
+    cursor: pointer;
 }
 
 .form__button:active {
