--- a/css/section.css
+++ b/css/section.css
@@ -7,6 +7,7 @@
     display: flex;
     flex-direction: column;
     align-content: center;
+    justify-content: center;
 }
 
 .section__header {
@@ -14,4 +15,39 @@
     font-size: 20px;
     padding: 15px;
     margin: 7px 20px 1px 20px;
+    display: grid;
+    grid-template-columns: 3fr 2fr;
 }
+@media (max-width: 767px) {
+    .section__header {
+        grid-template-columns: 1fr;
+        text-align: center;
+    }
+}
+
+.section__headerButtons {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+}
+
+@media (max-width: 767px) {
+    .section__headerButtons {
+        grid-template-columns: 1fr;
+        margin-top: 5px;
+    }
+}
+
+.section__headerHideButton {
+    background-color: white;
+    border: none;
+    color: teal;
+    font-size: 15px;
+}
+
+.section__headerDoneButton {
+    background-color: white;
+    border: none;
+    color: teal;
+    font-size: 15px;
+}
+
