--- a/css/list.css
+++ b/css/list.css
@@ -34,6 +34,7 @@
 .list__buttonDone:hover {
     background-color: rgb(1, 139, 1);
     cursor: pointer;
+    transition: 1s;
 }
 
 .list__buttonDone:active {
@@ -50,6 +51,7 @@
 
 .list_buttonRemove:hover {
     background-color: rgb(234, 89, 89);
+    transition: 1s;
 }
 
 .list_buttonRemove:active {
